# kairos-ai

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: kairos.yml
logs/incidents/: incident_1758844779.json  incident_1758844965.json  incident_1758844989.json  incident_1758864071.json  incident_1758864361.json  incident_1758864624.json  incident_1758869209.json  incident_1758869689.json  incident_1758885823.json  incident_1758886525.json  incident_1758909603.json  incident_1758910306.json  incident_1758911079.json
packaging/: run_kairos.py
reports/: INC-COMPOSITE-1758909603_playbook.md  INC-COMPOSITE-1758909603_ticket.txt  INC-COMPOSITE-1758910306_playbook.md  INC-COMPOSITE-1758910306_ticket.txt  report.html
rules/: lolbin_hints.yar  powershell_cradles.yar  script_droppers.yar  test_strings.yar
src/kairos/: main.py
src/kairos/analyzers/: chain_rules.py  email_rules.py  persistence_rules.py  rules.py  yara_scan.py
src/kairos/collectors/: email_imap.py  email_local.py  filesystem.py  network.py  persistence.py  processes.py
src/kairos/core/: config.py  policy.py  scaffold.py
src/kairos/notifiers/: base.py  formatting.py  sms_twilio.py
src/kairos/reports/: bundle.py  html.py  pdf.py  playbook.py
src/kairos/webapp/: server.py
src/kairos/webapp/templates/: health.html  home.html
src/kairos_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
